# generic_llm_api_client

./: .env.example  .gitignore  EXAMPLES.md  INTEGRATION_TESTING.md  PRICING.md  PUBLISHING.md  README.md  TESTING.md  example.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  tests.yml
ai_client/: __init__.py  alibaba_client.py  base_client.py  claude_client.py  cohere_client.py  content_order.py  deepseek_client.py  gemini_client.py  grok_client.py  mistral_client.py  openai_client.py  pricing.py  qwen_client.py  response.py  utils.py  xai_client.py
ai_client/tools/: __init__.py  default_tools.json  executor_base.py  executor_python.py  registry.py
ai_client/tools/builtin/: __init__.py  geonames.py  wikidata.py
tests/: README.md  __init__.py  conftest.py  test_async.py  test_base_client.py  test_caching.py  test_claude_client.py  test_files_and_resize.py  test_integration_basic.py  test_integration_files.py  test_integration_multimodal.py  test_integration_structured.py  test_openai_client.py  test_other_clients.py  test_response.py  test_utils.py
tests/fixtures/: README.md
