[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-llm-api-client"
version = "0.3.4"
description = "A unified, provider-agnostic Python client for multiple LLM APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sorin Marti", email = "sorin.marti@gmail.com"}
]
maintainers = [
    {name = "Sorin Marti", email = "sorin.marti@gmail.com"}
]
keywords = [
    "llm",
    "ai",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "mistral",
    "deepseek",
    "qwen",
    "cohere",
    "api-client",
    "humanities",
    "research",
    "benchmarking"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic~=0.84.0",
    "openai~=2.26.0",
    "mistralai~=1.12.4",
    "google-genai~=1.66.0",
    "cohere~=5.20.7",
    "requests~=2.32.5",
    "geonamescache~=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "Pillow>=12.1.1",
    "black>=26.3.0",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "Pillow>=12.1.1",
]

[project.urls]
Homepage = "https://github.com/RISE-UNIBAS/generic_llm_api_client"
Documentation = "https://github.com/RISE-UNIBAS/generic_llm_api_client#readme"
Repository = "https://github.com/RISE-UNIBAS/generic_llm_api_client"
Issues = "https://github.com/RISE-UNIBAS/generic_llm_api_client/issues"

[tool.setuptools]
packages = ["ai_client"]

[tool.setuptools.package-data]
ai_client = ["py.typed", "pricing.json", "tools/default_tools.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
